--- a/src/components/Navigation/NavigationBar.module.css
+++ b/src/components/Navigation/NavigationBar.module.css
@@ -1,9 +1,11 @@
 .navigationBar {
   position: fixed;
+  width: 100%;
   display: flex;
   flex-direction: row;
-  background-color: rgb(211, 78, 78);
+  background-color: rgb(154, 56, 56);
   color: aquamarine;
   align-items: center;
+  border-bottom: 50px solid rgb(125, 42, 42);
   justify-content: space-between;
 }
