Create Menu and subcomponents

--- a/src/components/Navigation/NavigationBar.module.css
+++ b/src/components/Navigation/NavigationBar.module.css
@@ -1,4 +1,5 @@
 .navigationBar {
+  z-index: 2;
   position: fixed;
   width: 100%;
   display: flex;
@@ -8,4 +9,24 @@
   align-items: center;
   border-bottom: 50px solid rgb(125, 42, 42);
   justify-content: space-between;
+}
+
+.yourCartButton {
+  box-shadow: 0px 0px 0px transparent;
+  border: 0px solid transparent;
+  text-shadow: 0px 0px 0px transparent;
+  font-size: 18px;
+  height: 65px;
+  width: 150px;
+  margin: 35px 20% 35px 0px;
+  border-radius: 50px;
+  background-color: aquamarine;
+}
+
+.yourCartButton:hover {
+  background-color: rgb(185, 255, 231);
+}
+
+.yourCartButton:active {
+  background-color: rgba(127, 255, 212, 0.83);
 }
