--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,19 +1,27 @@
 .banner {
   display: flex;
+  flex-direction: row;
   background-image: url("https://external-preview.redd.it/mfOQ0eUPj3SldsPGqHDsSfhCpo-uHTPpJfXVEpEu5z0.jpg?auto=webp&s=2e358d7534e3b1ef9912e2f51ea71e85c092510f");
   width: 100%;
   height: 750px;
   margin-top: 135px;
   background-size: cover;
   vertical-align: bottom;
-  align-items: flex-end;
+  flex-wrap: wrap;
 }
 
 .edge {
-  height: 300px;
+  /* height: 300px;*/
   width: 100%;
   background-color: rgb(125, 42, 42);
   clip-path: polygon(100% 0, 100% 0%, 100% 100%, 0% 100%);
+}
+
+.bannerContainer {
+  display: flex;
+  background-color: rgb(125, 42, 42);
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .bannerMessage {
@@ -21,11 +29,13 @@
   flex-direction: column;
   background-color: rgb(189, 161, 156);
   position: relative;
-  bottom: 150px;
   left: 25%;
   display: flex;
   width: 50%;
+  height: 200px;
+  top: 500px;
   border-radius: 15px;
+  z-index: 1;
 }
 
 .bannerMessage h1 {
@@ -36,5 +46,4 @@
   font-weight: bolder;
   color: rgb(0, 0, 0);
   width: 50%;
-  padding: 0px 15px 15px 0px;
 }
