--- a/src/components/Navigation/NavigationBar.module.css
+++ b/src/components/Navigation/NavigationBar.module.css
@@ -30,3 +30,10 @@
 .yourCartButton:active {
   background-color: rgba(127, 255, 212, 0.83);
 }
+
+.shoppingCart {
+  width: 15%;
+  height: auto;
+  margin-right: 10px;
+  margin-left: 10px;
+}
