--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -53,3 +53,13 @@
 .addToCartButton:active {
   background-color: rgb(105, 19, 19);
 }
+
+.description {
+  font-style: italic;
+}
+
+.price {
+  color: maroon;
+  font-weight: bold;
+  font-size: 19px;
+}
