--- a/src/components/Navigation/NavigationBar.module.css
+++ b/src/components/Navigation/NavigationBar.module.css
@@ -17,7 +17,7 @@
   text-shadow: 0px 0px 0px transparent;
   font-size: 18px;
   height: 65px;
-  width: 150px;
+  width: 200px;
   margin: 35px 20% 35px 0px;
   border-radius: 50px;
   background-color: aquamarine;
@@ -34,6 +34,10 @@
 .shoppingCart {
   width: 15%;
   height: auto;
-  margin-right: 10px;
-  margin-left: 10px;
+}
+
+.cartButtonInputs {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
