--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -21,6 +21,7 @@ h2 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  border: solid rgb(206, 206, 206) 1px;
   background-color: rgb(184, 129, 129);
   border-radius: 15px;
   padding: 10px 0px 10px 0px;
@@ -51,4 +52,29 @@ h2 {
 .minusButton {
   width: 20px;
   margin-top: 10px;
+}
+
+.itemTitle {
+  font-weight: bold;
+  font-size: larger;
+}
+
+.priceText {
+  font-style: italic;
+  color: rgb(236, 236, 236);
+  font-weight: bold;
+  margin-bottom: 2px;
+}
+
+.amountText {
+  font-size: large;
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 5px;
+  background-color: aliceblue;
+}
+
+.purchaseInfo {
+  display: flex;
+  align-items: center;
 }
