--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,13 +1,11 @@
 .button {
-  box-shadow: 0px 0px 0px transparent;
-  border: 0px solid transparent;
-  text-shadow: 0px 0px 0px transparent;
   border-radius: 50px;
   background-color: rgb(255, 255, 255);
+  transition: background-color 0.25s linear 0s;
 }
 
 .button:hover {
-  background-color: rgb(215, 255, 241);
+  background-color: rgb(226, 255, 245);
 }
 
 .button:active {
